@@ -92,7 +92,7 @@ NAME_TEMPLATE='targeted mutation ~~SEQUENCE~~, Wellcome Trust Sanger Institute'
 #
 
 NOTE_TEMPLATE_CONDITIONAL_PROMOTERDRIVEN='The ~~CASSETTE~~ cassette was inserted at position ~~LOCUS1~~ of Chromosome ~~CHROMOSOME~~ upstream of the critical exon(s) (Build ~~BUILD~~).  The cassette is composed of an FRT site followed by lacZ sequence and a loxP site.  This first loxP site is followed by neomycin under the control of the ~~PROMOTER~~, a second FRT site and a second loxP site.  A third loxP site is inserted downstream of the targeted exon(s) at position ~~LOCUS2~~.  The critical exon(s) is/are thus flanked by loxP sites.  A "conditional ready" (floxed) allele can be created by flp recombinase expression in mice carrying this allele.  Subsequent cre expression results in a knockout mouse.  If cre expression occurs without flp expression, a reporter knockout mouse will be created.  Further information on targeting strategies used for this and other KOMP alleles can be found at http://www.knockoutmouse.org/aboutkompstrategies.'
-NOTE_TEMPLATE_CONDITIONAL_AI_PROMOTERDRIVEN='The ~~CASSETTE~~ cassette was inserted at position ~~LOCUS1~~ Of Chromosome ~~CHROMOSOME~~ (Build ~~BUILD~~) within an endogenous exon, creating an artificial intron that splits the original exon into two artificial exons, where the downstream artificial exon is critical.  The cassette is composed of the intron of the Ifitm2 gene containing an FRT site followed by lacZ sequence and a loxP site. This first loxP site is followed by neomycin under the control of the human beta-actin promoter, SV40 polyA, a second FRT site and a second loxP site. A third loxP site is inserted downstream of the targeted exon(s) at position ~~LOCUS2~~. The critical artificial exon(s) is/are thus flanked by loxP sites. A "conditional ready" (floxed) allele can be created by flp recombinase expression in mice carrying this allele. Subsequent cre expression results in a knockout mouse. If cre expression occurs without flp expression, a reporter knockout mouse will be created. Further information on targeting strategies used for this and other EUCOMMTOOLs alleles can be found at http://www.knockoutmouse.org/about/eucommtools/vectors.'
+NOTE_TEMPLATE_CONDITIONAL_AI_PROMOTERDRIVEN='The ~~CASSETTE~~ cassette was inserted at position ~~LOCUS1~~ of Chromosome ~~CHROMOSOME~~ (Build ~~BUILD~~) within an endogenous exon, creating an artificial intron that splits the original exon into two artificial exons, where the downstream artificial exon is critical.  The cassette is composed of the intron of the Ifitm2 gene containing an FRT site followed by lacZ sequence and a loxP site. This first loxP site is followed by neomycin under the control of the human beta-actin promoter, SV40 polyA, a second FRT site and a second loxP site. A third loxP site is inserted downstream of the targeted exon(s) at position ~~LOCUS2~~. The critical artificial exon(s) is/are thus flanked by loxP sites. A "conditional ready" (floxed) allele can be created by flp recombinase expression in mice carrying this allele. Subsequent cre expression results in a knockout mouse. If cre expression occurs without flp expression, a reporter knockout mouse will be created. Further information on targeting strategies used for this and other EUCOMMTOOLs alleles can be found at http://www.knockoutmouse.org/about/eucommtools/vectors.'
 NOTE_TEMPLATE_CONDITIONAL_PROMOTERLESS='The ~~CASSETTE~~ cassette was inserted at position ~~LOCUS1~~ of Chromosome ~~CHROMOSOME~~ upstream of the critical exon(s) (Build ~~BUILD~~).  The cassette is composed of an FRT flanked lacZ/neomycin sequence followed by a loxP site.  An additional loxP site is inserted downstream of the targeted exon(s) at position ~~LOCUS2~~.  The critical exon(s) is/are thus flanked by loxP sites.  A "conditional ready" (floxed) allele can be created by flp recombinase expression in mice carrying this allele.  Subsequent cre expression results in a knockout mouse.  If cre expression occurs without flp expression, a reporter knockout mouse will be created.  Further information on targeting strategies used for this and other KOMP alleles can be found at http://www.knockoutmouse.org/aboutkompstrategies.'
 
 NOTE_TEMPLATE_NONCONDITIONAL_PROMOTERDRIVEN='The ~~CASSETTE~~ cassette was inserted at position ~~LOCUS1~~ of Chromosome ~~CHROMOSOME~~ upstream of the critical exon(s) (Build ~~BUILD~~).  The cassette is composed of an FRT site followed by lacZ sequence and a loxP site.  This first loxP site is followed by neomycin under the control of the ~~PROMOTER~~, a second FRT site and a second loxP site.  Insertion of this cassette creates a reporter knockout mouse.  Cre expression will remove the neomycin selection cassette.  Further information on targeting strategies used for this and other KOMP alleles can be found at http://www.knockoutmouse.org/aboutkompstrategies.'
