@@ -1,3 +1,11 @@
+TAG: targetedalleleload-tr6519-2
+DATE: 02/08/2013
+STAFF: sc
+CHANGES: 
+1) LookupAlleleByMarker - consider only those alleles
+with TAL project IDs
+2) configs - fixed typo in note template 
+
 TAG: targetedalleleload-tr6519-1
 DATE: 02/08/2013
 STAFF: sc
